--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,13 +23,16 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
 
+        <activity
+            android:name="sk.xeito.nfc.NfcReceiveActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <data android:mimeType="application/vnd.sk.xeito.nfc.beam"/>
             </intent-filter>
-
         </activity>
     </application>
 
